--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -68,6 +68,26 @@
   <!-- Experience-->
   <section>
     <label class="heroText">Places i have worked </label>
+    <!-- companies -->
+    <div class="companyList">
+      <button class="active" (click)="showDetails(instaval)">InstaVal</button> 
+      <button (click)="showDetails(nimbles)">Nimbles Engineering Company</button>
+    </div>
+    <p class="parag">
+      Researched, designed, and Prototyped a more approachable and valuable experience on business profile for Enterprise, Startups and Scaleups as a core part of Dealflow vetting
+    </p>
+    <p class="parag">
+      Redesigned and Implemented website, Landing pages from UI concepts to deployment
+    </p>
+    <p class="parag">
+      Worked with a variety of different languages, frameworks such as Javascript, Angular, Jquery
+    </p>
+    <p class="parag">
+      Revamped UI/UX for InstaVal Fintech based application
+    </p>
+    <p class="parag">
+      Communicated and collaborated with multi-disciplinary teams of engineers, Analyst, Testers, clients, and stakeholders subsequently
+    </p>
   </section>
 
   <!-- Work | personal project-->
