--- a/src/app/landing/landing.page.scss
+++ b/src/app/landing/landing.page.scss
@@ -157,12 +157,29 @@ footer {
     display: inline-block;
     padding: 3px;
     margin-right: 20px;
-  }
-  
-  .right {
+}
+
+.right {
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
-  }
+}
+
+.companyList {
+    button {
+        color: #0099ff;
+        font-size: 25px;
+        font-family: "OCR A";
+        background: none;
+        padding: 0;
+        margin-top: 20px;
+        margin-right: 90px;
+    }
+
+    button.active {
+        border-bottom: 1px solid $mainblue;
+        padding-bottom: 10px;
+    }
+}
 
 @media (max-width: 800px) {
     section {
