--- a/src/app/landing/landing.page.scss
+++ b/src/app/landing/landing.page.scss
@@ -103,10 +103,15 @@ $lightblue: rgb(204, 214, 246);
     margin-top: 25px;
 }
 
+.mainContent {
+   height: 100%;
+}
+
 section {
     padding: 19%;
     padding-top: 5%;
     overflow: hidden;
+    scroll-snap-align: start;
 }
 
 .heroText {
@@ -166,20 +171,40 @@ footer {
 
 .companyList {
     button {
-        color: #0099ff;
-        font-size: 25px;
-        font-family: "OCR A";
+        color:#8892b0;
+        font-size: 20px;
+        font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
         background: none;
         padding: 0;
         margin-top: 20px;
-        margin-right: 90px;
+        margin-right: 20px;
+        outline: none !important;
+        transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
     }
 
     button.active {
+        color: $mainblue;
         border-bottom: 1px solid $mainblue;
         padding-bottom: 10px;
+        transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
     }
 }
+
+.blue {
+    color: $mainblue;
+}
+
+.light {
+    color: rgb(136, 146, 176);
+    line-height: 30px;
+}
+
+label.light {
+    max-width: 750px;
+    margin: 0 0 30px 0px;
+}
+
+
 
 @media (max-width: 800px) {
     section {
@@ -187,5 +212,44 @@ footer {
     }
     .topLargeText label {
         font-size: 60px;
+    }
+    .header {
+        display: none!important;
+    }
+
+    .heroText {
+        font-size: 27px;
+    }
+
+    .topLargeText {
+        label {
+            font-size: 60px;
+        }
+    }
+    .topLargeText p:first-child {
+        font-size: 13px;
+        margin-bottom: 10px;
+    }
+    .topLargeText p:nth-child(3) {
+        font-size: 20px;
+    }
+}
+
+
+@media (max-width: 425px) {
+    .topLargeText {
+        label {
+            font-size: 30px;
+        }
+    }
+    .topLargeText p:nth-child(3) {
+        font-size: 16px;
+    }
+
+    .parag {
+        font-size: 16px;
+    }
+    .heroText {
+        font-size: 26px;
     }
 }
