--- a/src/app/landing/landing.page.scss
+++ b/src/app/landing/landing.page.scss
@@ -4,6 +4,7 @@
 }
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap");
 
+
 $mainblue: #0099ff;
 $lightblue: rgb(204, 214, 246);
 
@@ -24,7 +25,7 @@ $lightblue: rgb(204, 214, 246);
         cursor: pointer;
         margin-left: 10px;
         font-size: 13px;
-        border-width: 1px;
+        border-width: 2px;
         border-style: solid;
         border-color: $mainblue;
         border-image: initial;
@@ -32,6 +33,7 @@ $lightblue: rgb(204, 214, 246);
         padding: 0.75rem 1rem;
         text-decoration: none;
         transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+        font-weight: 700;
 
         &:hover {
             background-color: #0099ff28;
@@ -62,7 +64,7 @@ $lightblue: rgb(204, 214, 246);
         line-height: 1;
         cursor: pointer;
         margin-top: 50px;
-        border-width: 1px;
+        border-width: 2px;
         border-style: solid;
         border-color: $mainblue;
         border-image: initial;
@@ -70,7 +72,7 @@ $lightblue: rgb(204, 214, 246);
         padding: 1.25rem 1.75rem;
         text-decoration: none;
         transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
-
+        font-weight: 700;
         &:hover {
             background-color: #0099ff28;
         }
@@ -180,6 +182,7 @@ footer {
         margin-right: 20px;
         outline: none !important;
         transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+        font-weight: 700;
     }
 
     button.active {
@@ -204,17 +207,30 @@ label.light {
     margin: 0 0 30px 0px;
 }
 
-
+.mobileHeader {
+    display:none;
+}
 
 @media (max-width: 800px) {
     section {
-        padding: 10%;
+        padding: 6%;
+        padding-left: 8%;
+        padding-top: 23%;
     }
     .topLargeText label {
         font-size: 60px;
     }
     .header {
         display: none!important;
+    }
+    .mobileHeader {
+        display: inline;
+
+        svg {
+            height: 32px;
+            width: 32px;
+            fill: #ccd6f6;
+        }
     }
 
     .heroText {
