--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -137,3 +137,11 @@ $mainblue: #0099ff;
         }
     }
 }
+
+.bgsvg {
+    svg {
+        height: 100vh;
+        width: 100vw;
+        overflow: visible;
+    }
+}
