large text reveal with ionic animation

--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -52,7 +52,7 @@
 
 
   <!-- about -->
-  <section id="about">
+  <section id="about" class="sec">
     <label class="heroText">About Me</label>
     <p class="parag">Hi there i'm Israel, you may call me easy. I'm a frontend developer based in UAE, Dubai</p>
     <p class="parag">Some more description about me</p>
@@ -86,7 +86,7 @@
   </section>
 
   <!-- Experience-->
-  <section id="experience">
+  <section id="experience" class="sec">
     <label class="heroText">Places i have worked </label>
     <!-- companies -->
     <div class="companyList">
@@ -150,13 +150,13 @@
   </section>
 
   <!-- Work | personal project-->
-  <section id="work">
+  <section id="work" class="sec">
 
     <label class="heroText">Some things i've built</label>
   </section>
 
   <!-- Finally | Reach out-->
-  <section>
+  <section class="sec">
     <label class="heroText"></label>
   </section>
 
