--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -151,8 +151,26 @@
 
   <!-- Work | personal project-->
   <section id="work" class="sec">
-
     <label class="heroText">Some things i've built</label>
+
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-list lines="none">
+            <ion-item *ngFor="let work of works">
+              <ion-label>
+                <span>0{{work.id}}</span> &nbsp;&nbsp; <span>{{work.workName}}</span>
+              </ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+        <ion-col class="workImages" size="8">
+            <ion-item *ngFor="let work of works" lines="none">
+                <ion-img [src]="work.imageUrl"></ion-img>
+            </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </section>
 
   <!-- Finally | Reach out-->
