--- a/src/app/landing/landing.page.scss
+++ b/src/app/landing/landing.page.scss
@@ -1,5 +1,3 @@
-
-
 $mainblue: #0099ff;
 $lightblue: rgb(204, 214, 246);
 
@@ -9,7 +7,7 @@ $lightblue: rgb(204, 214, 246);
 
     ion-button {
         text-transform: capitalize;
-        font-family: "OCR A";
+        font-family: "OCRA A";
     }
 
     button {
@@ -77,7 +75,7 @@ $lightblue: rgb(204, 214, 246);
 .topLargeText p:first-child {
     color: $mainblue;
     font-size: 25px;
-    font-family: "OCR A";
+    font-family: "OCRA A";
     margin-bottom: 0;
 }
 .topLargeText label {
@@ -101,7 +99,7 @@ $lightblue: rgb(204, 214, 246);
 }
 
 .mainContent {
-   height: 100%;
+    height: 100%;
 }
 
 section {
@@ -148,7 +146,7 @@ section {
 
 footer {
     ion-title {
-        font-family: "OCR A";
+        font-family: "OCRA A";
         color: $lightblue;
     }
 }
@@ -168,7 +166,7 @@ footer {
 
 .companyList {
     button {
-        color:#8892b0;
+        color: #8892b0;
         font-size: 20px;
         font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
         background: none;
@@ -203,7 +201,7 @@ label.light {
 }
 
 .mobileHeader {
-    display:none;
+    display: none;
 }
 
 @media (max-width: 800px) {
@@ -216,7 +214,7 @@ label.light {
         font-size: 60px;
     }
     .header {
-        display: none!important;
+        display: none !important;
     }
     .mobileHeader {
         display: inline;
@@ -247,7 +245,6 @@ label.light {
     }
 }
 
-
 @media (max-width: 425px) {
     .topLargeText {
         label {
@@ -266,28 +263,36 @@ label.light {
     }
 }
 
-
-
 * {
-    transition: transform .25s
+    transition: transform 0.25s;
 }
 
 #work {
     width: 100%;
+    padding-right: 0px;
+
+    ion-label {
+        span {
+            font-family: "OCRA A";
+            color: #8892b0;
+        }
+    }
 }
 
 .workImages {
-    display:flex;
+    display: flex;
     flex-wrap: wrap;
     align-items: center;
-    position: absolute;
-    right: 0;
-    transform: translate(16px, 10px);
-    
+    // position: absolute;
+    // right: 0;
+    // transform: translate(16px, 10px);
+   
+
     ion-img {
         width: auto;
         height: 100%;
-           max-width: 350px;
+        max-width: 350px;
         max-height: 350px;
+        min-width: 177px;
     }
 }
