--- a/src/app/landing/landing.page.scss
+++ b/src/app/landing/landing.page.scss
@@ -286,7 +286,6 @@ label.light {
     // position: absolute;
     // right: 0;
     // transform: translate(16px, 10px);
-   
 
     ion-img {
         width: auto;
@@ -294,5 +293,67 @@ label.light {
         max-width: 350px;
         max-height: 350px;
         min-width: 177px;
+        // border-radius: 6px;
+
+        &:hover {
+            .overlay {
+                display:block;
+            }
+        }
     }
+
+    ion-item {
+        padding: 10px;
+    }
+}
+.workImages ion-item:hover .overlay {
+    display: block;
+    transition: transform 0.5s;
+
+
+    
+}
+
+.langs {
+    position: absolute;
+    bottom: 0;
+    left:0;
+}
+
+.overlay {
+    transition: transform 0.5s;
+    display: none;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: #172a45 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    // border-radius: 6px;
+    opacity: 0.99;
+    padding: 10px 10px 0px 30px;
+
+    h2 {
+        font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+        color: #ccd6f6;
+    }
+
+    p {
+        color: #8892b0;
+    }
+
+    .links {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        padding-right: 20px;
+        padding-bottom: 20px;
+        color: #fff;
+    }
+}
+
+
+
+
+@media(max-width: 800px){
+
 }
